<resources>
    <string name="app_name">Timetable</string>
    <string name="starting_hour">Starting hour:</string>
    <string name="finish_hour">Finish hour:</string>
    <string name="weekday">Weekday:</string>
    <string name="place">Place:</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="label">Label:</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="helper_text_add_screen">Add some cards by pressing the plus button above!</string>
    <string name="settings">Settings</string>
    <string name="time_parser">Time: %1$s - %2$s</string>
    <string name="place_parser">Place: %1$s</string>
    <string name="name_parser">Name: %1$s</string>
    <string name="info_parser">Description: %1$s</string>
    <string name="saved_edit_state">editState</string>
    <string name="lock">Lock</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="about">About</string>
    <string name="about_text">Thanks for using my timetable app! This is my first project and I worked quite a bit into making it look as neat as possible, however there are many improvements to be made. You can email me at the address below for feedback or suggestions, until then I hope the app will serve you well!</string>
    <string name="things_to_do">1. Add cards by pressing the + button in the toolbar.\n\n2. Edit cards by tapping them.\nAdd subtasks for each card and see all the subtasks in the subtask menu.\n\n3. Lock cards to be unable to edit them.\n\n4. Organize your timetable for multiple weeks or multiple people by assigning different labels per card (or don\'t and disregard labels for simplicity).\n\n5. Color your app from the settings page however you like.\n\n6. Set reminders for your cards or subtasks.\n\n7. Sleep well and don\'t overwork yourself!</string>
    <string name="things_you_can_do">Things you can do</string>
    <string name="developer">Developer</string>
    <string name="developer_text">Developed with enthusiasm by Craciun Ioan-Flaviu.\nEmail: jack92657@gmail.com</string>
    <string name="set_color">Card color</string>
    <string name="no_need_for_hint">No need for hint</string>
    <string name="text_color">Text color</string>
    <string name="default_font">sans-serif-medium</string>
    <string name="all_subtasks">All Subtasks</string>
    <string name="subtask_description">TODO: %s</string>
    <string name="due_date_format">Deadline: %s</string>'
    <string name="reminder_format">There is a reminder set at %s</string>
    <string name="unset_format">No deadline set</string>
    <string name="one_label">Label:</string>
    <string name="more_labels">Labels:</string>
    <string name="delete_label">Delete Label</string>
    <string name="edit_labels">Edit Labels</string>
    <string name="label_name">Label name:</string>
    <string name="add_label">Add label</string>
    <string name="cancel">Cancel</string>
    <string name="edit_label">Edit Label</string>
    <string name="add_subtask">Add subtask</string>
    <string name="subtasks">Subtasks</string>
    <string name="deadline">Deadline:</string>
    <string name="reminder">Reminder:</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="time_error">A date and time in the future is required</string>
    <string name="reset_reminder">Reset Reminder</string>
    <string name="reset_alert">You have removed the reminder for the card</string>
    <string name="notification_alert">You have set a reminder</string>
    <string name="update">Update</string>
    <string name="weekday_format">Day of week: %s</string>
    <string name="visibility">Visibility</string>
    <string name="reset_deadline">Reset Deadline</string>
    <string name="complete">Complete</string>
    <string name="clone_card">Clone card</string>
    <string name="expiration_date">Expiration date:</string>
    <string name="reset">Reset</string>
    <string name="reset_expiration">Reset Expiration</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>