<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/add"
        android:id="@+id/addCardFragment"
        android:icon="@drawable/baseline_add_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>
    <item
        android:title="@string/settings"
        android:id="@+id/settingsFragment"
        android:orderInCategory="2"/>
    <item
        android:title="@string/edit_labels"
        android:id="@+id/editLabelFragment"
        android:orderInCategory="3"/>
    <item
        android:title="@string/all_subtasks"
        android:id="@+id/subtaskFragment"
        android:orderInCategory="4"/>
    <item
        android:title="@string/about"
        android:id="@+id/aboutFragment"
        android:orderInCategory="5"/>
</menu>