<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addsubtask.AddSubtaskFragment">

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/deadline_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:textIsSelectable="false"
            android:inputType="none"
            android:focusable="false"
            android:hint="@string/deadline"
            app:layout_constraintEnd_toEndOf="@+id/description_edit_text"
            app:layout_constraintStart_toStartOf="@+id/description_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/description_edit_text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/reminder_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:textIsSelectable="false"
            android:inputType="none"
            android:focusable="false"
            android:hint="@string/reminder"
            app:layout_constraintEnd_toEndOf="@+id/deadline_edit_text"
            app:layout_constraintStart_toStartOf="@+id/deadline_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/deadline_edit_text"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/add_subtask_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/add_subtask"
            android:textColor="@color/primaryTextColor"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/reset_deadline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBaseline_toBaselineOf="@+id/deadline_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deadline_edit_text" />

        <Button
            android:id="@+id/reset_reminder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBaseline_toBaselineOf="@+id/reminder_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reminder_edit_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>