<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="card"
            type="com.flaviu.timetable.database.Card" />
        <variable
            name="clickListener"
            type="com.flaviu.timetable.ui.list.CardListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addsubtask.AddSubtaskFragment">

        <include
            android:id="@+id/card_layout"
            layout="@layout/timetable_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:card="@{card}"
            app:clickListener="@{clickListener}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_layout" />

        <EditText
            android:id="@+id/deadline_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/deadline"
            android:importantForAutofill="no"
            android:inputType="none"
            android:textIsSelectable="false"
            app:layout_constraintEnd_toEndOf="@+id/description_edit_text"
            app:layout_constraintStart_toStartOf="@+id/description_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />

        <EditText
            android:id="@+id/reminder_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/reminder"
            android:importantForAutofill="no"
            android:inputType="none"
            android:textIsSelectable="false"
            app:layout_constraintEnd_toEndOf="@+id/deadline_edit_text"
            app:layout_constraintStart_toStartOf="@+id/deadline_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/deadline_edit_text" />

        <Button
            android:id="@+id/edit_subtask_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/update"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delete_button" />

        <Button
            android:id="@+id/reset_deadline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBaseline_toBaselineOf="@+id/deadline_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deadline_edit_text" />

        <Button
            android:id="@+id/reset_reminder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBaseline_toBaselineOf="@+id/reminder_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reminder_edit_text" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/delete"
            android:textColor="@color/primaryTextColor"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edit_subtask_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
